--- a/pages/style/mystyle.css
+++ b/pages/style/mystyle.css
@@ -1,7 +1,8 @@
 * {
-        background-color: #ffffff;
+        /* background-color: #ffffff; */
         box-sizing:border-box;
         font-size: 16px;
+        /* color: #103E13; */
 }
 
 /* header */
